auto attach to tmux after ssh connect (It make sshuttle not working)

--- a/sshd_config.template
+++ b/sshd_config.template
@@ -20,7 +20,7 @@ AllowUsers $USER
 # Only allow those keys
 AuthorizedKeysFile $PWD/authorized_keys
 
-# Force to start tmux on login
-#ForceCommand tmux attach
+# Force to start tmux on login (It make sshuttle not working)
+ForceCommand tmux attach
 
 # vim: ft=sshdconfig
