--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "20 1,7,13,19 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
