--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -2,8 +2,8 @@
 name: CI
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "20 1,7,13,19 * * *"
+  #schedule:
+  #  - cron: "20 1,7,13,19 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
