--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -16,6 +16,7 @@ jobs:
       TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
       SECRET_FILES: ${{ secrets.SECRET_FILES }}
     steps:
+      - run: sudo rm -rf /usr/local /opt/hostedtoolcache /opt/az /opt/microsoft /opt/pipx /opt/google
       - uses: actions/checkout@v3
       - run: if [ ! -z "$SECRET_FILES" ]; then echo $SECRET_FILES | base64 --decode | tar -xz -C ./home/; fi
       - run: cp -r ./home/. ~
