--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -26,8 +26,8 @@ jobs:
       - run: pip install --upgrade python-telegram
       - run: $GITHUB_WORKSPACE/setup-cloudflared
         shell: bash
-      - run: $GITHUB_WORKSPACE/setup-proxies
-        shell: bash
+      # - run: $GITHUB_WORKSPACE/setup-proxies
+      #   shell: bash
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
       - name: Keep Alive
