--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -6,7 +6,7 @@ on:
   #  - cron: "20 1,7,13,19 * * *"
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       RUNNER_PASSWORD: ${{ secrets.RUNNER_PASSWORD }}
       TG_SESSION_STRING: ${{ secrets.TG_SESSION_STRING }}
