--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -33,8 +33,8 @@ jobs:
       # - run: sudo dpkg -i libssl1.1_1.1.1f-1ubuntu2.23_amd64.deb
       - run: $GITHUB_WORKSPACE/setup-cloudflared
         shell: bash
-      # - run: $GITHUB_WORKSPACE/setup-proxies
-      #   shell: bash
+      - run: $GITHUB_WORKSPACE/setup-proxies
+        shell: bash
       - run: $GITHUB_WORKSPACE/setup-ssh
         shell: bash
       - name: Keep Alive
