--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -21,7 +21,7 @@ jobs:
       #   uses: actions/setup-node@v3
       #   with:
       #     node-version: 22
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       # - run: if [ ! -z "$SECRET_FILES" ]; then echo $SECRET_FILES | base64 --decode | tar -xz -C ./home/; fi
       # - run: cp -r ./home/. ~
       # - run: curl -L 'https://github.com/glotlabs/gdrive/releases/download/3.6.0/gdrive_linux-x64.tar.gz' | tar -xz -C ~/.local/bin
