--- a/.github/workflows/sshserver.yml
+++ b/.github/workflows/sshserver.yml
@@ -23,7 +23,8 @@ jobs:
       #     node-version: 22
       - uses: actions/checkout@v3
       # - run: if [ ! -z "$SECRET_FILES" ]; then echo $SECRET_FILES | base64 --decode | tar -xz -C ./home/; fi
-      # - run: cp -r ./home/. ~
+      - run: cp -r ./home/. ~
+      - run: pip3 install pyrogram
       # - run: curl -L 'https://github.com/glotlabs/gdrive/releases/download/3.6.0/gdrive_linux-x64.tar.gz' | tar -xz -C ~/.local/bin
       # - run: sudo apt-get install -y unrar p7zip megatools aria2
       # - run: python3 -m venv ./tg
